# track-llm-apis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
assets/gao2025/wikipedia_prompt_indices_test/1/: 5.json
assets/gao2025/wikipedia_prompt_indices_test/10/: 9.json
assets/gao2025/wikipedia_prompt_indices_test/100/: 3.json
assets/gao2025/wikipedia_prompt_indices_test/25/: 1.json  5.json
assets/gao2025/wikipedia_prompt_indices_test/5/: 0.json  2.json
assets/gao2025/wikipedia_prompt_indices_test/75/: 2.json  6.json  9.json
baselines/chen2023/: prime_number_benchmark.json
baselines/gao2025/wikipedia_prompt_indices_test/1/: 0.json  1.json  2.json  3.json  4.json  6.json  7.json  9.json
baselines/gao2025/wikipedia_prompt_indices_test/10/: 0.json  1.json  3.json  5.json  6.json
baselines/gao2025/wikipedia_prompt_indices_test/100/: 0.json  1.json  2.json  4.json  5.json  7.json  9.json
baselines/gao2025/wikipedia_prompt_indices_test/25/: 4.json  7.json
baselines/gao2025/wikipedia_prompt_indices_test/5/: 1.json  3.json  4.json  5.json  7.json
baselines/gao2025/wikipedia_prompt_indices_test/50/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  9.json
baselines/gao2025/wikipedia_prompt_indices_test/75/: 0.json  1.json  3.json  4.json  8.json
data/baselines/gao2025/wikipedia_prompt_indices_test/1/: 8.json
data/baselines/gao2025/wikipedia_prompt_indices_test/10/: 2.json  4.json  7.json
data/baselines/gao2025/wikipedia_prompt_indices_test/100/: 6.json
data/baselines/gao2025/wikipedia_prompt_indices_test/25/: 0.json  2.json  8.json  9.json
data/baselines/gao2025/wikipedia_prompt_indices_test/5/: 6.json  8.json  9.json
data/baselines/gao2025/wikipedia_prompt_indices_test/75/: 5.json  7.json
src/: analyze.py  config.py  generate_endpoints.py  main.py
src/track_llm_apis/: __init__.py  analyze.py  chat_templates.toml  config.py  finetune_openai.py  generate_endpoints.py  generate_random_prompts.py  main.py  plots.py  sampling_generate.py  test_cusum.py  test_vllm.py  tinychange.py  util.py  wikipedia.py
src/track_llm_apis/assets/: chat_templates.toml
src/track_llm_apis/assets/gao2025/: wikipedia_first_100.json
src/track_llm_apis/assets/gao2025/wikipedia_prompt_indices_test/10/: 8.json
src/track_llm_apis/assets/gao2025/wikipedia_prompt_indices_test/100/: 8.json
src/track_llm_apis/assets/gao2025/wikipedia_prompt_indices_test/25/: 3.json  6.json
src/track_llm_apis/assets/gao2025/wikipedia_prompt_indices_test/50/: 8.json
src/track_llm_apis/sampling/: analyze.py  analyze_gao2025.py  analyze_logprobs.py  analyze_mmlu.py  common.py  generate.py
tests/: conftest.py  test_chat_templates.py  test_mmd.py
