[project]
name = "track-llm-apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "datasets>=3.6.0",
    "fire>=0.7.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai>=1.78.1",
    "plotly>=6.1.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scipy<=1.15.3", # due to a bug https://github.com/statsmodels/statsmodels/issues/9584
    "statsmodels>=0.14.4",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "trl>=0.19.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.11.9",
]

[tool.ruff]
line-length=100

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",  # isort
]
