[project]
name = "track-llm-apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "beartype>=0.21.0",
    "datasets>=3.6.0",
    "fire>=0.7.0",
    "frozendict>=2.4.6",
    "frozenlist>=1.6.0",
    "jaxtyping>=0.3.2",
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "nvidia-modelopt>=0.33.0",
    "onnx>=1.18.0",
    "openai>=1.78.1",
    "peft>=0.16.0",
    "plotly>=6.1.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scipy<=1.15.3", # due to a bug https://github.com/statsmodels/statsmodels/issues/9584
    "statsmodels>=0.14.4",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "trl>=0.19.1",
    "vllm>=0.10.0",
    "xxhash>=3.5.0",
]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[dependency-groups]
dev = [
    "microsoft-python-type-stubs",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-env>=1.1.5",
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "I",  # isort
]
# ignore F722 due to jaxtyping string annotations interpreted as forward references
extend-ignore = ["F722"]

[tool.pytest.ini_options]
env = ["CUBLAS_WORKSPACE_CONFIG=:4096:8"]
